force-app/main/default/objects/EYI_Customer_Visit_Information__c/EYI_Customer_Visit_Information__c.object-meta.xml
<CustomObject>
    <label>Customer Visit Information</label>
    <nameField>
        <displayFormat>VN-{00000}</displayFormat>
        <label>Visit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Visit Informations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>