force-app/main/default/objects/EYI_Customer_Visit_Information__c/fields/EYI_Customer_Information_Form__c.field-meta.xml
<CustomField>
    <fullName>EYI_Customer_Information_Form__c</fullName>
    <label>Customer Information Form</label>
    <referenceTo>EYI_Customer_Information_Form__c</referenceTo>
    <relationshipLabel>Customer Visit Informations</relationshipLabel>
    <relationshipName>Customer_Visit_Informations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>