force-app/main/default/objects/EYI_Customer_Visit_Information__c/fields/EYI_Number_of_Person__c.field-meta.xml
<CustomField>
    <fullName>EYI_Number_of_Person__c</fullName>
    <label>Number of Person</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>