force-app/main/default/objects/EYI_Customer_Visit_Information__c/fields/EYI_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>EYI_Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Customer Visit Informations</relationshipLabel>
    <relationshipName>Customer_Visit_Informations</relationshipName>
    <type>Lookup</type>
</CustomField>