force-app/main/default/objects/EYI_Customer_Visit_Information__c/fields/EYI_Remark__c.field-meta.xml
<CustomField>
    <fullName>EYI_Remark__c</fullName>
    <label>Remark</label>
    <type>TextArea</type>
</CustomField>