force-app/main/default/objects/EYI_Customer_Visit_Information__c/fields/EYI_Revisiting_OTP__c.field-meta.xml
<CustomField>
    <fullName>EYI_Revisiting_OTP__c</fullName>
    <label>Revisiting OTP</label>
    <length>6</length>
    <type>Text</type>
</CustomField>