force-app/main/default/objects/EYI_Customer_Visit_Information__c/fields/EYI_Secondary_Closing_Manager__c.field-meta.xml
<CustomField>
    <fullName>EYI_Secondary_Closing_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Closing Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customer_Visit_Informations</relationshipName>
    <type>Lookup</type>
</CustomField>