force-app/main/default/objects/EYI_Customer_Visit_Information__c/fields/EYI_Visit_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>EYI_Visit_Date_Time__c</fullName>
    <label>Visit Date Time</label>
    <type>DateTime</type>
</CustomField>