force-app/main/default/objects/EYI_Customer_Visit_Information__c/fields/EYI_Visit_Date_Time_Text__c.field-meta.xml
<CustomField>
    <fullName>EYI_Visit_Date_Time_Text__c</fullName>
    <formula>TEXT(DATEVALUE( EYI_Visit_Date_Time__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Visit Date Time Text</label>
    <type>Text</type>
</CustomField>