force-app/main/default/objects/EYI_Customer_Visit_Information__c/fields/EYI_Visiting_With__c.field-meta.xml
<CustomField>
    <fullName>EYI_Visiting_With__c</fullName>
    <label>Visiting With</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
                <label>Individual</label>
            </value>
            <value>
                <fullName>Family</fullName>
            </value>
            <value>
                <fullName>Friends</fullName>
            </value>
            <value>
                <fullName>Children</fullName>
                <isActive>false</isActive>
                <label>Children</label>
            </value>
            <value>
                <fullName>Group</fullName>
                <isActive>false</isActive>
                <label>Group</label>
            </value>
            <value>
                <fullName>Parents</fullName>
                <isActive>false</isActive>
                <label>Parents</label>
            </value>
            <value>
                <fullName>Relatives</fullName>
                <isActive>false</isActive>
                <label>Relatives</label>
            </value>
            <value>
                <fullName>Siblings</fullName>
                <isActive>false</isActive>
                <label>Siblings</label>
            </value>
            <value>
                <fullName>Spouse</fullName>
                <isActive>false</isActive>
                <label>Spouse</label>
            </value>
            <value>
                <fullName>Spouse and children</fullName>
                <isActive>false</isActive>
                <label>Spouse and children</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>