force-app/main/default/objects/EYI_Customer_Visit_Information__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>EYI_Opportunity__c</columns>
    <columns>EYI_Customer_Information_Form__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>EYI_Visit_Date_Time__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>